--- a/26라이브서버_DOMContentLoaded.html
+++ b/26라이브서버_DOMContentLoaded.html
@@ -9,12 +9,31 @@ DOM(Document Object Model) : 문서 객체 모델
   <title>Document</title>
   <script>
     document.addEventListener('DOMContentLoaded', () => { // DOM 조작하려면 처음에 써야하는 것. DOMContentLoaded 이벤트가 발생했을 때 아래 콜백함수를 실행해달라는 의미
-      // 문서 객체 조작 가능 부분!
+      // 문서 객체 조작 가능 부분! (선택자들)
+
+      // 태그 선택자
+      document.querySelector('h1').style.color = 'white'
+      // 아이디 선택자
+      document.querySelector('#header').style.backgroundColor = 'green'
+      // 클래스 선택자
+      document.querySelector('.center.head').style.textAlign = "center" // 여러개의 클래스 선택은 .으로 이음(띄어쓰기X)
+      // 속성 선택자
+      document.querySelector('[type=text]').style.borderRadius = '10px'
+      // 후손 선택자
+      document.querySelector('body input').style.backgroundColor = 'blue'
+
+      // 선택자 여러 개 선택하기
+      for (const element of document.querySelectorAll('input')){
+        element.style.backgroundColor = 'pink'
+      }
     })
   </script>
 </head>
 <body>
-  <h1>안녕하세요!</h1>
+  <h1 id="header" class="center head">안녕하세요!</h1>
+  <input type="text">
+  <input>
+
   <script>
     // 문서 객체 조작 가능 부분! 여기서는 이미 DOM이 완성된 상태라 DOMContentLoaded 이벤트를 쓰지 않아도 됨
   </script>
